links; contact page

--- a/04-html-coffee-junkie-project-mmd1/contact.html
+++ b/04-html-coffee-junkie-project-mmd1/contact.html
@@ -39,7 +39,7 @@
         id=""
         cols="30"
         rows="10"
-        placeholder="Your Description"
+        placeholder="Your message."
       ></textarea>
       <!-- submit -->
       <br />
