--- a/04-html-coffee-junkie-project-mmd2/order.html
+++ b/04-html-coffee-junkie-project-mmd2/order.html
@@ -72,8 +72,8 @@
       <br />
     </form>
     <p>
-      We will get in touch with you soon with more information about prices and
-      quantities.
+      We will get in touch with you soon with additional information about
+      prices and quantities.
     </p>
     <br />
     <br />
