--- a/04-html-coffee-junkie-project-mmd2/contact.html
+++ b/04-html-coffee-junkie-project-mmd2/contact.html
@@ -42,7 +42,7 @@
         id=""
         cols="30"
         rows="10"
-        placeholder="Your Description."
+        placeholder="Your message."
       ></textarea>
       <!-- input submit -->
       <br />
